--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ body{
     -moz-background-size: 100%;
     -o-background-size: 100%;
     background-size: 100%;
+    overflow: scroll;
 }
 
 .wrapper {
