--- a/style.css
+++ b/style.css
@@ -29,11 +29,7 @@ body{
     background-color: var(--blue-light);
     background-image: url(/img/bg-pattern1.png);
     background-repeat: repeat;
-    -webkit-background-size: 100%;
-    -moz-background-size: 100%;
-    -o-background-size: 100%;
-    background-size: 100%;
-    overflow: scroll;
+    overflow-y: scroll;
 }
 
 .wrapper {
