--- a/style.css
+++ b/style.css
@@ -27,9 +27,8 @@ body{
     justify-content: center;
     align-items: center;
     background-color: var(--blue-light);
-    background-image: url(/img/bg-pattern1.png);
+    background-image: url(/img/bg-pattern1.svg);
     background-repeat: repeat;
-    overflow-y: scroll;
 }
 
 .wrapper {
